<?xml version="1.0"?>
<package format="2">
  <name>behavior_manager_server</name>
  <version>1.1.0</version>
  <description>The behavior_manager_server package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>networkx</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>behavior_manager_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
