<?xml version="1.0"?>
<package format="2">
  <name>behavior_manager_server</name>
  <version>1.1.0</version>
  <description>The behavior_manager_server package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-networkx</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-networkx</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>behavior_manager_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-networkx</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-networkx</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>behavior_manager_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <test_depend>actionlib</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-networkx</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-networkx</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>behavior_manager_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
