<?xml version="1.0"?>
<package format="2">
  <name>jsk_fetch_behaviors</name>
  <version>0.0.0</version>
  <description>The jsk_fetch_behaviors package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>behavior_manager_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>behavior_manager_server</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>behavior_manager_server</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
